# RELEVANCE-HOPE

./: LICENSE  README.md  hope.py
config/: pathLossModel.json
hsys/: __init__.py  databroker.py  module.py
modules/: __init__.py  mod.json
modules/dummy/: dummyModule.py
src/: CMakeLists.txt  hope.py  hopeMain.py  package.xml  setup.py
src/HOPE/: package.xml  setup.cfg  setup.py
src/HOPE/HOPE/: RELEVANCE_HOPE.py
src/HOPE/HOPE/modules/: dummyModule.py  dummyModuleFER.py  dummyModuleRecv.py  ferPrediction.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: DummyMsg.msg  FerPredictionMsgResult.msg
src/hopeTest/: package.xml  setup.cfg  setup.py
src/hopeTest/hopeTest/: testMod.py
src/include/hsys/: __init__.py  databroker.py  module.py
src/include/modules/: __init__.py  dummyModule.py  dummyModuleFER.py  dummyModuleRecv.py  ferPrediction.py
src/msg/: ferPredictionMsg.msg
